<resources>
    <string name="app_name">RetoADPSP 3: Android Edition</string>
    <string name="sesionUsuario">Nombre de usuario:</string>
    <string name="introUsuario">Introduzca el nombre de usuario</string>
    <string name="sesionContra">Contraseña:</string>
    <string name="sesionContraRepe">Repetir contraseña:</string>
    <string name="introContra">Introduzca la contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="salir">Salir</string>
    <string name="exito">Éxito</string>
    <string name="sesionExito">Sesión iniciada con éxito</string>
    <string name="sesionFracaso">Error al iniciar sesión</string>
    <string name="sesionFracasoUsuario">El usuario no existe</string>
    <string name="sesionFracasoContra">La contraseña es incorrecta</string>
    <string name="registrarse">Registrarse</string>
    <string name="registroContraDesigual">La contraseña no coincide</string>
    <string name="acercaDe">Acerca De</string>
    <string name="dondeEncontrarnos">Donde encontrarnos</string>
    <string name="tuPosicion">Tu posición</string>
    <string name="menuPrincipal">Menú Principal</string>
    <string name="title_activity_elorrieta">Elorrieta</string>
    <string name="title_activity_actual">Actual</string>
    <string name="title_activity_posicion_actual">PosicionActual</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_consultas_sql">ConsultasSQL</string>
    <string name="cabecera">Consultas sobre Base de Datos</string>
    <string name="servidor">Servidor:</string>
    <string name="puerto">Puerto:</string>
    <string name="bd">Base de Datos:</string>
    <string name="usuario">Usuario:</string>
    <string name="pass">Contraseña:</string>
    <string name="vacio">Sin datos</string>
    <string name="consulta">Introducir Consulta Transact-SQL</string>
    <string name="botonConsulta">Ejecutar Consulta</string>
    <string name="resultado">Resultados de la consulta "Select"</string>
    <string name="logo">Logo Academia Android</string>
    <string name="cabeceraMain">Conectar a MySQL</string>
    <string name="dirServidor">Dirección Servidor</string>
    <string name="numPuerto">Nº Puerto</string>
    <string name="mainUsuario">Usuario</string>
    <string name="mainPass">Contraseña</string>
    <string name="mainConex">Abrir Conexión</string>
</resources>