<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultaBD">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ConsultaBD"
        tools:ignore="MergeRootFrame">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="568dp"
            android:layout_marginLeft="15dip">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cabecera"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/servidor" />

                    <TextView
                        android:id="@+id/txtServidor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vacio" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/puerto" />

                    <TextView
                        android:id="@+id/txtPuerto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vacio" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/usuario" />

                    <TextView
                        android:id="@+id/txtUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vacio" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false">

                    <TextView
                        android:id="@+id/textViewPass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pass" />

                    <EditText
                        android:id="@+id/edPasswordCon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:editable="true"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="@string/vacio"
                        android:inputType="textPassword"
                        android:textAppearance="?android:attr/textAppearanceSmall">

                    </EditText>

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bd" />

                    <TextView
                        android:id="@+id/txtBaseDatos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vacio" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edConsulta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:ems="10"
                        android:hint="@string/consulta"
                        android:onClick="consultaSelect" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnEjecutar"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="mostrarResultados"
                        android:text="@string/botonConsulta" />


                </TableRow>
            </TableLayout>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:scrollbars="vertical">

                    <EditText
                        android:id="@+id/edResultado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#8438fdff"
                        android:editable="false"
                        android:ems="15"
                        android:hint="@string/resultado"
                        android:inputType="textMultiLine"
                        android:textStyle="bold|italic" />

                </ScrollView>

            </TableRow>

        </TableLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>